--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -32,13 +32,14 @@
         <input 
           type="text"
           class="form-control" 
+          [formControl]="nuevoFavorito"
           placeholder="Agregar favorito"
-          (keyup.enter)="1+1">
+          (keyup.enter)="agregarFavorito()">
 
         <button 
           class="btn btn-outline-primary" 
             type="submit"
-            (click)="1+1">
+            (click)="agregarFavorito()">
             Agregar
         </button>
       </div>
@@ -60,7 +61,8 @@
           [formControlName]="i">
         <button
           class="btn btn-outline-danger"
-          type="button">
+          type="button"
+          (click)="borrar(i)">
           Borrar
         </button>
       </div>
