--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<form [formGroup]="miFormulario">
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()" >
 
 <!-- Radio -->
 <div class="row mb-3">
@@ -96,7 +96,8 @@
 
   <div class="row">
     <div class="col">
-      <button 
+      <button
+        type="submit"
         class="btn btn-primary float-end">
         Guardar
       </button>
